fixed bug on mobile view where its too wide

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -35,7 +35,7 @@
 }
 
 .news{
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     display: grid;
 	padding:5px;
 	white-space: pre-line;
